feat: fix polish fonts, some theoretical dissertations

--- a/latex/bibliografia.bib
+++ b/latex/bibliografia.bib
@@ -89,6 +89,15 @@
 
 % Game Engine Research Literature
 
+@book{gregory2018game,
+    author    = {Gregory, Jason},
+    title     = {Game Engine Architecture},
+    publisher = {A~K Peters/CRC Press},
+    edition   = {3rd},
+    year      = {2018},
+    isbn      = {978-1138035454}
+}
+
 @article{ullmann2022game,
     author    = {Ullmann, G. C. and Politowski, C. and Guéhéneuc, Y.-G. and Anquetil, N.},
     title     = {Game engine comparative anatomy},
