--- a/latex/main.tex
+++ b/latex/main.tex
@@ -83,6 +83,9 @@
 \input{tex/2-przeglad-literatury}       % Przegląd literatury i istniejących rozwiązań
 \input{tex/3-silniki-gier}              % Charakterystyka współczesnych silników gier
 \input{tex/4-metodologia}               % Metodologia badań i kryteria porównania
+\input{tex/wywiady-analiza}             % Analiza wywiadów z deweloperami gier
+\input{tex/implementacja-gry}           % Doświadczenia z implementacji gry testowej
+\input{tex/narzedzia-profilowania}      % Narzędzia profilowania wydajności
 \input{tex/5-testy-wydajnosci}          % Testy wydajności
 \input{tex/6-analiza-mozliwosci}        % Analiza możliwości i funkcjonalności
 \input{tex/7-porownanie-wynikow}        % Porównanie wyników i analiza
@@ -92,7 +95,10 @@
 % Bibliografia
 %---------------
 \cleardoublepage % Zaczynamy od nieparzystej strony
+\begingroup
+\emergencystretch=1em
 \printbibliography
+\endgroup
 \clearpage
 
 % Wykaz symboli i skrótów.
