--- a/latex/tex/3-silniki-gier.tex
+++ b/latex/tex/3-silniki-gier.tex
@@ -2,46 +2,141 @@
 \section{Charakterystyka współczesnych silników gier}
 
 \subsection{Kryteria wyboru silników do analizy}
-W ramach niniejszej pracy wybrano reprezentatywne silniki gier reprezentujące różne segmenty rynku:
+
+Rynek silników gier komputerowych oferuje szeroki wachlarz rozwiązań, od prostych frameworków 2D po zaawansowane środowiska do tworzenia fotorealistycznych produkcji AAA. W ramach niniejszej pracy zdecydowano się na dogłębną analizę dwóch silników: \textbf{Unity} oraz \textbf{Unreal Engine}. Wybór ten podyktowany był kilkoma kluczowymi czynnikami:
+
 \begin{itemize}
-    \item Popularność i rozpowszechnienie
-    \item Różnorodność technologiczna
-    \item Wsparcie dla różnych platform
-    \item Dostępność dokumentacji i narzędzi
+    \item \textbf{Dominacja rynkowa} -- według danych z~2024 roku, Unity i~Unreal Engine wspólnie obsługują ponad 70\% globalnego rynku gier komputerowych i~mobilnych
+    \item \textbf{Reprezentatywność podejść architektonicznych} -- silniki reprezentują odmienne filozofie: Unity opiera się na języku C\# z~garbage collectorem, a~Unreal wykorzystuje natywny C++ z~ręcznym zarządzaniem pamięcią
+    \item \textbf{Różnorodność zastosowań} -- Unity tradycyjnie dominuje w segmencie gier mobilnych i indie, natomiast Unreal jest preferowany w produkcjach AAA i projektach wymagających fotorealistycznej grafiki
+    \item \textbf{Dostępność} -- oba silniki oferują darmowe wersje dla małych zespołów i projektów edukacyjnych, co czyni je dostępnymi dla szerokiego grona deweloperów
+    \item \textbf{Bogata dokumentacja} -- zarówno Unity jak i Unreal dysponują rozbudowaną dokumentacją oficjalną oraz aktywnymi społecznościami
 \end{itemize}
 
 \subsection{Unity}
-\subsubsection{Architektura i technologie}
-% Opis architektury silnika Unity, stosowanych technologii
+\label{subsec:unity}
+
+\subsubsection{Wprowadzenie i historia}
+
+Unity to wieloplatformowy silnik gier stworzony przez Unity Technologies, którego pierwsza wersja została wydana w 2005 roku jako ekskluzywne narzędzie dla systemu macOS. Od tego czasu silnik przeszedł znaczącą ewolucję, stając się jednym z najpopularniejszych rozwiązań do tworzenia gier na świecie.
+
+Kluczowym momentem w historii Unity było wprowadzenie w 2010 roku darmowej wersji silnika (Unity Free), co znacząco obniżyło barierę wejścia dla początkujących deweloperów i małych studiów. Decyzja ta przyczyniła się do eksplozji popularności silnika w segmencie gier mobilnych oraz indie.
+
+Unity wykorzystuje język programowania \textbf{C\#} działający na platformie .NET/Mono, co zapewnia:
+\begin{itemize}
+    \item Automatyczne zarządzanie pamięcią poprzez garbage collector
+    \item Bezpieczeństwo typów i obsługę wyjątków
+    \item Bogatą bibliotekę standardową
+    \item Stosunkowo łagodną krzywą uczenia dla programistów znających Javę lub podobne języki
+\end{itemize}
+
+Architektura Unity opiera się na wzorcu \textit{GameObject-Component}, gdzie każdy obiekt w scenie (GameObject) może posiadać dowolną liczbę komponentów definiujących jego zachowanie. Podejście to promuje kompozycję nad dziedziczeniem i ułatwia tworzenie modularnego kodu.
 
 \subsubsection{Możliwości i funkcjonalności}
-% Szczegółowy opis oferowanych funkcji
+
+Unity oferuje kompleksowy zestaw narzędzi do tworzenia gier 2D i 3D:
+
+\begin{itemize}
+    \item \textbf{Rendering} -- wsparcie dla wielu pipeline'ów renderowania: Built-in, Universal Render Pipeline (URP) dla platform mobilnych oraz High Definition Render Pipeline (HDRP) dla wysokiej jakości grafiki
+    \item \textbf{Fizyka} -- integracja z silnikami PhysX (3D) i Box2D (2D)
+    \item \textbf{Animacja} -- system Mecanim z obsługą maszyn stanów i blendingu animacji
+    \item \textbf{Audio} -- wbudowany system dźwięku przestrzennego
+    \item \textbf{UI} -- dwa systemy interfejsu użytkownika: legacy uGUI oraz nowoczesny UI Toolkit
+    \item \textbf{Multiplayer} -- Netcode for GameObjects oraz integracja z usługami sieciowymi
+\end{itemize}
 
 \subsubsection{Narzędzia deweloperskie}
-% Edytor, debugger, profiler, etc.
+
+Edytor Unity zapewnia intuicyjny interfejs graficzny z następującymi funkcjonalnościami:
+\begin{itemize}
+    \item Hierarchiczny widok sceny z możliwością edycji w czasie rzeczywistym
+    \item Inspektor właściwości z obsługą serializacji pól poprzez atrybut \texttt{[SerializeField]}
+    \item Wbudowany profiler wydajności (CPU, GPU, pamięć)
+    \item Asset Store -- marketplace z gotowymi zasobami i rozszerzeniami
+    \item Obsługa hot reload -- możliwość edycji kodu podczas działania gry
+\end{itemize}
 
 \subsection{Unreal Engine}
-\subsubsection{Architektura i technologie}
-% Opis architektury Unreal Engine
+\label{subsec:unreal}
+
+\subsubsection{Wprowadzenie i historia}
+
+Unreal Engine to silnik gier stworzony przez Epic Games, którego historia sięga 1998 roku, kiedy to zadebiutował wraz z grą \textit{Unreal}. Od początku silnik był projektowany z myślą o tworzeniu gier pierwszoosobowych (FPS) o wysokiej jakości graficznej, co nadal pozostaje jego mocną stroną.
+
+Przełomowym momentem było wydanie Unreal Engine 4 w 2014 roku na licencji royalty-free (5\% od przychodów powyżej \$1 miliona), a następnie Unreal Engine 5 w 2022 roku, wprowadzającego rewolucyjne technologie takie jak Nanite (wirtualizowana geometria) i Lumen (globalne oświetlenie w czasie rzeczywistym).
+
+Unreal Engine wykorzystuje język programowania \textbf{C++} z rozszerzeniami specyficznymi dla silnika (makra UE), co zapewnia:
+\begin{itemize}
+    \item Maksymalną wydajność dzięki kompilacji do kodu natywnego
+    \item Pełną kontrolę nad zarządzaniem pamięcią
+    \item Dostęp do kodu źródłowego silnika (po uzyskaniu licencji)
+    \item Strome krzywe uczenia, szczególnie dla programistów bez doświadczenia w C++
+\end{itemize}
+
+Dodatkowo Unreal oferuje system \textbf{Blueprints} -- wizualny język skryptowy pozwalający na tworzenie logiki gry bez pisania kodu. Blueprinty są szczególnie przydatne dla designerów i artystów, choć dla złożonych systemów mogą być mniej wydajne niż natywny C++.
 
 \subsubsection{Możliwości i funkcjonalności}
-% Blueprint system, C++ support, rendering pipeline
+
+Unreal Engine wyróżnia się zaawansowanymi możliwościami graficznymi:
+
+\begin{itemize}
+    \item \textbf{Rendering} -- fotorealistyczna grafika z obsługą ray tracingu, Nanite i Lumen
+    \item \textbf{Fizyka} -- silnik Chaos Physics z obsługą destrukcji i symulacji ciał miękkich
+    \item \textbf{Animacja} -- Control Rig, Animation Blueprints, IK Retargeting
+    \item \textbf{Landscape} -- zaawansowane narzędzia do tworzenia dużych terenów
+    \item \textbf{Niagara} -- system efektów cząsteczkowych nowej generacji
+    \item \textbf{Sequencer} -- narzędzie do tworzenia cinematików i cutscen
+\end{itemize}
 
 \subsubsection{Narzędzia deweloperskie}
-% Unreal Editor, Visual Scripting, etc.
 
-\subsection{Godot}
-\subsubsection{Architektura i technologie}
-% Opis architektury silnika Godot
+Unreal Editor oferuje rozbudowane środowisko deweloperskie:
+\begin{itemize}
+    \item Edytor poziomów z obsługą streamingu i Level of Detail (LOD)
+    \item Blueprint Visual Scripting -- programowanie wizualne
+    \item Material Editor -- węzłowy edytor materiałów
+    \item Wbudowany profiler z analizą GPU/CPU i pamięci
+    \item Marketplace -- sklep z zasobami i pluginami
+    \item Live Coding -- eksperymentalne wsparcie dla hot reload w C++
+\end{itemize}
 
-\subsubsection{Możliwości i funkcjonalności}
-% GDScript, scene system, node-based architecture
+\subsection{Porównanie architektoniczne}
 
-\subsubsection{Narzędzia deweloperskie}
-% Integrated editor, scripting tools
+\begin{table}[ht]
+\centering
+\caption{Porównanie kluczowych cech Unity i Unreal Engine}
+\label{tab:unity-vs-unreal}
+\begin{tabular}{|l|c|c|}
+\hline
+\textbf{Cecha} & \textbf{Unity} & \textbf{Unreal Engine} \\
+\hline
+Język programowania & C\# & C++ / Blueprints \\
+\hline
+Zarządzanie pamięcią & Automatyczne (GC) & Ręczne / Smart pointers \\
+\hline
+Architektura & GameObject-Component & Actor-Component \\
+\hline
+Natywne wsparcie 2D & Tak & Nie (symulowane) \\
+\hline
+Kod źródłowy & Częściowo dostępny & Pełny dostęp \\
+\hline
+Rozmiar pustego projektu & $\sim$100 MB & $\sim$1-2 GB \\
+\hline
+Krzywa uczenia & Łagodna & Stroma \\
+\hline
+Główne zastosowania & Mobile, indie, 2D & AAA, FPS, fotorealizm \\
+\hline
+\end{tabular}
+\end{table}
 
-\subsection{Inne analizowane silniki}
-% Krótka charakterystyka dodatkowych silników (np. CryEngine, GameMaker Studio)
+\subsection{Uzasadnienie wyboru do badań}
 
-\subsection{Porównanie tabelaryczne podstawowych cech}
-% Tabela porównawcza kluczowych parametrów
+Wybór Unity i Unreal Engine jako przedmiotu porównania pozwala na analizę dwóch fundamentalnie różnych podejść do tworzenia gier:
+
+\begin{enumerate}
+    \item \textbf{Produktywność vs wydajność} -- C\# w Unity oferuje szybszy rozwój kosztem pewnego narzutu wydajnościowego, podczas gdy C++ w Unreal wymaga więcej pracy, ale zapewnia maksymalną kontrolę
+    \item \textbf{Dostępność vs specjalizacja} -- Unity celuje w szeroki rynek z niskim progiem wejścia, Unreal koncentruje się na produkcjach premium
+    \item \textbf{Elastyczność vs integracja} -- Unity pozwala na większą swobodę w doborze zewnętrznych narzędzi, Unreal oferuje bardziej zintegrowane rozwiązania
+\end{enumerate}
+
+Analiza tych dwóch silników dostarcza kompleksowego obrazu współczesnego stanu technologii do tworzenia gier i pozwala na sformułowanie praktycznych rekomendacji dla deweloperów.
