--- a/latex/tex/5-testy-wydajnosci.tex
+++ b/latex/tex/5-testy-wydajnosci.tex
@@ -1,5 +1,6 @@
 \clearpage
 \section{Testy wydajności}
+\label{sec:testy-wydajnosci}
 
 \subsection{Metodyka przeprowadzania testów}
 \subsubsection{Przygotowanie środowiska testowego}
